--- a/src/home.css
+++ b/src/home.css
@@ -29,11 +29,11 @@
     text-rendering: optimizeLegibility;
     scroll-behavior: smooth;
   }
-  @media screen and (min-width: 320px) {
+ /* @media screen and (min-width: 320px) {
     html {
-      font-size: calc(12px + 6 * ((100vw - 320px) / 680));
+      font-size: calc(16px + 2 * ((100vw - 320px) / 680));
     }
-  }
+  }*/
   @media screen and (min-width: 1000px) {
     html {
       font-size: 18px;
@@ -47,12 +47,13 @@
   /* fonts */
   h1 { }
   
-  h2 {color: #172DC7; font-size: 2.2rem; font-weight: bold; padding-bottom: 1rem;}
+  h2 {color: #172DC7; font-size: 2rem; font-weight: bold; padding-bottom: 1rem;}
   
   h3 {font-size: 1.4rem;
       padding-bottom: 2rem;
       font-weight: normal;
-      color: #666;}
+      color: #666;
+      line-height: 1.5}
   
   p {font-size: 1rem; color: #666; line-height: 1.6;}
   
@@ -68,9 +69,10 @@
 }
   }
 
- .navbar {
+.navbar {
     background: white !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    padding: .5rem 2rem;
   }
   
 .navbar-light .navbar-nav .nav-link {
@@ -83,7 +85,18 @@
     transition: .4s;
 }
 
+.nav-link {
+  padding: 1rem;
+}
 
+@media (min-width: 900px) {
+  .btn-right {
+    margin-right: 0px;
+  }
+}
+.navbar-toggler {
+  margin-right: 0;
+}
 
 img.brand-logo {
     width: 2.5rem;
@@ -127,12 +140,12 @@ img.brand-logo {
   }
   
   .columns {
-      padding: 5rem 0;
+      padding: 4rem 0;
   }
   .hero-img {padding: 2rem 4rem 2rem 0rem}
   .process-img {padding: 2rem; min-height: 200px}
   
-  @media (min-width: 414px) {
+  @media (min-width: 415px) {
   .partners-img {
     width: 66%;
     margin: auto;
